re-format all code files to definition style